@@ -527,7 +527,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
     protected final ServiceTracker<ExpeditionTrackerFactory, ExpeditionTrackerFactory> expeditionConnectorTracker;
 
     protected final SwissTimingAdapterPersistence swissTimingAdapterPersistence;
-    
+
     private final ServiceTracker<SwissTimingAdapterFactory, SwissTimingAdapterFactory> swissTimingAdapterTracker;
 
     private final ServiceTracker<TracTracAdapterFactory, TracTracAdapterFactory> tractracAdapterTracker;
@@ -535,15 +535,15 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
     private final ServiceTracker<IgtimiConnectionFactory, IgtimiConnectionFactory> igtimiAdapterTracker;
 
     private final ServiceTracker<RaceLogTrackingAdapterFactory, RaceLogTrackingAdapterFactory> raceLogTrackingAdapterTracker;
-    
+
     private final ServiceTracker<YellowBrickTrackingAdapterFactory, YellowBrickTrackingAdapterFactory> yellowBrickTrackingAdapterTracker;
-    
+
     private final ServiceTracker<DeviceIdentifierStringSerializationHandler, DeviceIdentifierStringSerializationHandler> deviceIdentifierStringSerializationHandlerTracker;
-    
+
     private final FullyInitializedReplicableTracker<SecurityService> securityServiceTracker;
 
     private final FullyInitializedReplicableTracker<SharedSailingData> sharedSailingDataTracker;
-    
+
     protected final com.sap.sailing.domain.tractracadapter.persistence.MongoObjectFactory tractracMongoObjectFactory;
 
     private final DomainObjectFactory domainObjectFactory;
@@ -553,11 +553,11 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
     private final com.sap.sailing.domain.tractracadapter.persistence.DomainObjectFactory tractracDomainObjectFactory;
 
     protected final Executor executor;
-    
+
     protected final com.sap.sailing.domain.base.DomainFactory baseDomainFactory;
-    
+
     private static final int LEADERBOARD_BY_NAME_RESULTS_CACHE_BY_ID_SIZE = 100;
-    
+
     private static final int LEADERBOARD_DIFFERENCE_CACHE_SIZE = 50;
 
     protected static final String MAILTYPE_PROPERTY = "com.sap.sailing.domain.tracking.MailInvitationType";
@@ -578,7 +578,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
     private final SwissTimingReplayService swissTimingReplayService;
 
     private final QuickRanksLiveCache quickRanksLiveCache;
-    
+
     public SailingServiceImpl() {
         BundleContext context = Activator.getDefault();
         Activator activator = Activator.getInstance();
@@ -635,7 +635,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
             activator.setSailingService(this); // register so this service is informed when the bundle shuts down
         }
     }
-    
+
     /**
      * Stops this service and frees its resources. In particular, caching services and threads owned by this service will be
      * notified to stop their jobs.
@@ -652,7 +652,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
     protected SwissTimingAdapter getSwissTimingAdapter() {
         return getSwissTimingAdapterFactory().getOrCreateSwissTimingAdapter(baseDomainFactory);
     }
-    
+
     protected TracTracAdapterFactory getTracTracAdapterFactory() {
         return tractracAdapterTracker.getService();
     }
@@ -750,7 +750,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
         }
         return new Pair<>(Collections.emptyList(), /* hint */ null);
     }
-    
+
     @Override
     public SerializationDummy serializationDummy(PersonDTO dummy,
             CountryCode ccDummy, PreciseCompactPosition preciseCompactPosition,
@@ -767,7 +767,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
      * the missing columns to its profile and start a synchronous computation for the requesting client, the result of
      * which will be used as live leaderboard cache update.
      * <p>
-     * 
+     *
      * Otherwise, the leaderboard is computed synchronously on the fly.
      * @param previousLeaderboardId
      *            if <code>null</code> or no leaderboard with that {@link LeaderboardDTO#getId() ID} is known, a
@@ -913,7 +913,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
         return getSecurityService().mapAndFilterByReadPermissionForCurrentUser(
                 getService().getAllRegattas(), this::convertToRegattaDTO);
     }
-    
+
     @Override
     public RegattaDTO getRegattaByName(String regattaName) {
         RegattaDTO result = null;
@@ -926,7 +926,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
         }
         return result;
     }
-    
+
     protected MarkDTO convertToMarkDTO(Mark mark, Position position) {
         MarkDTO markDTO;
         if (position != null) {
@@ -940,7 +940,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
         markDTO.type = mark.getType();
         return markDTO;
     }
-    
+
     protected RegattaDTO convertToRegattaDTO(Regatta regatta) {
         RegattaDTO regattaDTO = new RegattaDTO(regatta.getName(), regatta.getScoringScheme().getType());
         regattaDTO.races = convertToRaceDTOs(regatta);
@@ -965,7 +965,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
         regattaDTO.registrationLinkSecret = regatta.getRegistrationLinkSecret();
         return regattaDTO;
     }
-    
+
     private BoatClassDTO convertToBoatClassDTO(BoatClass boatClass) {
         return boatClass==null?null:new BoatClassDTO(boatClass.getName(), boatClass.getHullLength(), boatClass.getHullBeam());
     }
@@ -987,8 +987,8 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
         List<RaceColumnDTO> raceColumns = convertToRaceColumnDTOs(series.getRaceColumns());
         SeriesDTO result = new SeriesDTO(series.getName(), fleets, raceColumns, series.isMedal(), series.isFleetsCanRunInParallel(),
                 series.getResultDiscardingRule() == null ? null : series.getResultDiscardingRule().getDiscardIndexResultsStartingWithHowManyRaces(),
-                        series.isStartsWithZeroScore(), series.isFirstColumnIsNonDiscardableCarryForward(), series.hasSplitFleetContiguousScoring(),
-                        series.getMaximumNumberOfDiscards(), series.isOneAlwaysStaysOne());
+                        series.isStartsWithZeroScore(), series.isFirstColumnNonDiscardableCarryForward(), series.hasSplitFleetContiguousScoring(),
+                        series.hasCrossFleetMergedRanking(), series.getMaximumNumberOfDiscards(), series.isOneAlwaysStaysOne());
         return result;
     }
 
@@ -997,7 +997,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
         raceColumnDTO.setMedalRace(raceColumn.isMedalRace());
         raceColumnDTO.setExplicitFactor(raceColumn.getExplicitFactor());
     }
-    
+
     private List<RaceColumnDTO> convertToRaceColumnDTOs(Iterable<? extends RaceColumn> raceColumns) {
         List<RaceColumnDTO> raceColumnDTOs = new ArrayList<RaceColumnDTO>();
         RaceColumnDTOFactory columnFactory = RaceColumnDTOFactory.INSTANCE;
@@ -1011,7 +1011,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
         }
         return raceColumnDTOs;
     }
-    
+
     private RaceInfoDTO createRaceInfoDTO(String seriesName, RaceColumn raceColumn, Fleet fleet,
             RaceLog raceLog, ReadonlyRaceState state) {
         RaceInfoDTO raceInfoDTO = new RaceInfoDTO();
@@ -1062,7 +1062,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
             if (abortingFlagEvent != null) {
                 raceInfoDTO.isRaceAbortedInPassBefore = true;
                 raceInfoDTO.abortingTimeInPassBefore = abortingFlagEvent.getLogicalTimePoint().asDate();
-                
+
                 if (raceInfoDTO.lastStatus == RaceLogRaceStatus.UNSCHEDULED || raceInfoDTO.lastStatus == RaceLogRaceStatus.PRESCHEDULED) {
                     raceInfoDTO.lastUpperFlag = abortingFlagEvent.getUpperFlag();
                     raceInfoDTO.lastLowerFlag = abortingFlagEvent.getLowerFlag();
@@ -1102,7 +1102,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
         raceInfoDTO.raceIdentifier = raceColumn.getRaceIdentifier(fleet);
         return raceInfoDTO;
     }
-    
+
     private void fillStartProcedureSpecifics(RaceInfoDTO raceInfoDTO, ReadonlyRaceState state) {
         RaceInfoExtensionDTO info = null;
         raceInfoDTO.startProcedure = state.getRacingProcedure().getType();
@@ -1128,7 +1128,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
         for (RaceDefinition r : regatta.getAllRaces()) {
             RegattaAndRaceIdentifier raceIdentifier = new RegattaNameAndRaceName(regatta.getName(), r.getName());
             TrackedRace trackedRace = getService().getExistingTrackedRace(raceIdentifier);
-            TrackedRaceDTO trackedRaceDTO = null; 
+            TrackedRaceDTO trackedRaceDTO = null;
             final RankingMetrics rankingMetricType;
             if (trackedRace != null) {
                 trackedRaceDTO = getBaseDomainFactory().createTrackedRaceDTO(trackedRace);
@@ -1143,7 +1143,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
                 SecurityDTOUtil.addSecurityInformation(getSecurityService(), raceDTO);
                 getBaseDomainFactory().updateRaceDTOWithTrackedRaceData(trackedRace, raceDTO);
             }
-            raceDTO.boatClass = regatta.getBoatClass() == null ? null : regatta.getBoatClass().getName(); 
+            raceDTO.boatClass = regatta.getBoatClass() == null ? null : regatta.getBoatClass().getName();
             result.add(raceDTO);
         }
         return result;
@@ -1161,7 +1161,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
         }
         return result;
     }
-    
+
     protected CompetitorDTO convertToCompetitorDTO(Competitor competitor) {
         CompetitorDTO competitorDTO = baseDomainFactory.convertToCompetitorDTO(competitor);
         SecurityDTOUtil.addSecurityInformation(getSecurityService(), competitorDTO);
@@ -1176,7 +1176,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
             competitorDTO.clearNonPublicFields();
         }
     }
-    
+
     protected CompetitorWithBoatDTO convertToCompetitorWithBoatDTO(CompetitorWithBoat competitor) {
         CompetitorWithBoatDTO competitorDTO = baseDomainFactory.convertToCompetitorWithBoatDTO(competitor);
         SecurityDTOUtil.addSecurityInformation(getSecurityService(), competitorDTO);
@@ -1231,7 +1231,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
         }
         return result;
     }
-    
+
     protected BoatDTO convertToBoatDTO(Boat boat) {
         BoatDTO boatDTO = baseDomainFactory.convertToBoatDTO(boat);
         SecurityDTOUtil.addSecurityInformation(getSecurityService(), boatDTO);
@@ -1248,7 +1248,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
                 continue;
             }
             result.add(new TracTracRaceRecordDTO(raceRecord.getID(), raceRecord.getEventName(), raceRecord.getName(),
-                    raceRecord.getTrackingStartTime().asDate(), 
+                    raceRecord.getTrackingStartTime().asDate(),
                     raceRecord.getTrackingEndTime().asDate(), raceRecord.getRaceStartTime() == null ? null : raceRecord.getRaceStartTime().asDate(),
                     raceRecord.getBoatClassNames(), raceRecord.getRaceStatus(), raceRecord.getRaceVisibility(), raceRecord.getJsonURL().toString(),
                     hasRememberedRegatta(raceRecord.getID())));
@@ -1277,7 +1277,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
                     return config;
                 });
     }
-    
+
     private RaceDefinition getRaceByName(Regatta regatta, String raceName) {
         if (regatta != null) {
             return regatta.getRaceByName(raceName);
@@ -1285,7 +1285,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
             return null;
         }
     }
-    
+
     @Override
     public WindInfoForRaceDTO getRawWindFixes(RegattaAndRaceIdentifier raceIdentifier, Collection<WindSource> windSources) {
         WindInfoForRaceDTO result = null;
@@ -1467,7 +1467,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
     private interface PositionAtTimeProvider {
         Position getPosition(TimePoint at);
     }
-    
+
     private WindTrackInfoDTO createWindTrackInfoDTO(TimePoint from, long millisecondsStepWidth, int numberOfFixes,
             TrackedRace trackedRace, boolean onlyUpToNewestEvent, TimePoint newestEvent, WindSource windSource,
             PositionAtTimeProvider positionProvider) {
@@ -1504,7 +1504,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
             }
             timePoint = new MillisecondsTimePoint(timePoint.asMillis() + millisecondsStepWidth);
         }
-        windTrackInfoDTO.minWindConfidence = minWindConfidence; 
+        windTrackInfoDTO.minWindConfidence = minWindConfidence;
         windTrackInfoDTO.maxWindConfidence = maxWindConfidence;
         return windTrackInfoDTO;
     }
@@ -1599,7 +1599,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
         // get simulation-results from smart-future-cached simulation-service
         SimulatorResultsDTO result = null;
         SimulationService simulationService = getService().getSimulationService();
-        if (simulationService == null) 
+        if (simulationService == null)
             return result;
         SimulationResults simulationResults = simulationService.getSimulationResults(legIdentifier);
         if (simulationResults == null) {
@@ -1635,7 +1635,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
         }
         return result;
     }
-    
+
     private SimulatorWindDTO createSimulatorWindDTO(TimedPositionWithSpeed timedPositionWithSpeed) {
         Position position = timedPositionWithSpeed.getPosition();
         SpeedWithBearing speedWithBearing = timedPositionWithSpeed.getSpeed();
@@ -1800,7 +1800,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
         return new CompactRaceMapDataDTO(boatPositions, coursePositions, courseSidelines, quickRanks,
                 simulationResultVersion, raceCompetitorIdsAsStrings, estimatedDuration);
     }
-    
+
     private Duration getEstimationForTargetTime(Date time, final TrackedRace trackedRace) {
         Duration estimatedDuration = null;
         if (trackedRace != null) {
@@ -1826,7 +1826,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
     /**
      * {@link LegType}s are cached within the method with a resolution of one minute. The cache key is a pair of
      * {@link TrackedLegOfCompetitor} and {@link TimePoint}.
-     * 
+     *
      * @param from
      *            for the list of competitors provided as keys of this map, requests the GPS fixes starting with the
      *            date provided as value
@@ -1950,7 +1950,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
             } finally {
                 trackedRace.getRace().getCourse().unlockAfterRead();
             }
-        }   
+        }
         if (raceTimesInfo != null) {
             raceTimesInfo.currentServerTime = new Date();
         }
@@ -1996,7 +1996,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
         }
         return result;
     }
-        
+
     @Override
     public CoursePositionsDTO getCoursePositions(RegattaAndRaceIdentifier raceIdentifier, Date date) {
         CoursePositionsDTO result = new CoursePositionsDTO();
@@ -2069,7 +2069,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
         }
         return result;
     }
-      
+
     @Override
     public RaceCourseDTO getRaceCourse(RegattaAndRaceIdentifier raceIdentifier, Date date) {
         List<WaypointDTO> waypointDTOs = new ArrayList<WaypointDTO>();
@@ -2098,14 +2098,14 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
         }
         return new RaceCourseDTO(waypointDTOs, allMarks);
     }
-    
+
     class TrackedRaceMarkPositionFinder implements MarkPositionFinder{
         private TrackedRace trackedRace;
 
         public TrackedRaceMarkPositionFinder(TrackedRace trackedRace) {
             this.trackedRace = trackedRace;
         }
-        
+
         @Override
         public Position find(Mark mark, TimePoint at) {
             final TimePoint timePointToUse = trackedRace == null ? null :
@@ -2119,17 +2119,17 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
             return result;
         }
     }
-    
+
     interface MarkPositionFinder {
         Position find(Mark mark, TimePoint at);
     }
-    
+
     private ControlPointDTO convertToControlPointDTO(ControlPoint controlPoint, MarkPositionFinder positionFinder, TimePoint timePoint) {
         ControlPointDTO result;
-        
+
         if (controlPoint instanceof ControlPointWithTwoMarks) {
             final Mark left = ((ControlPointWithTwoMarks) controlPoint).getLeft();
-            final Position leftPos =  positionFinder.find(left, timePoint);
+            final Position leftPos = positionFinder.find(left, timePoint);
             final Mark right = ((ControlPointWithTwoMarks) controlPoint).getRight();
             final Position rightPos = positionFinder.find(right, timePoint);
             result = new GateDTO(controlPoint.getId().toString(), controlPoint.getName(),
@@ -2141,7 +2141,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
         }
         return result;
     }
-    
+
     protected ControlPoint getOrCreateControlPoint(ControlPointDTO dto) {
         String idAsString = dto.getIdAsString();
         if (idAsString == null) {
@@ -2177,7 +2177,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
             }
             final RaceDefinition race = trackedRace.getRace();
             int oneBasedRank = 1;
-            final List<Competitor> competitorsFromBestToWorst = trackedRace.getCompetitorsFromBestToWorst(actualTimePoint);
+            final Iterable<Competitor> competitorsFromBestToWorst = trackedRace.getCompetitorsFromBestToWorst(actualTimePoint);
             for (Competitor competitor : competitorsFromBestToWorst) {
                 TrackedLegOfCompetitor trackedLeg = trackedRace.getTrackedLeg(competitor, actualTimePoint);
                 if (trackedLeg != null || !trackedRace.getMarkPassings(competitor).isEmpty()) {
@@ -2250,7 +2250,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
             throw new RuntimeException(e);
         }
     }
-    
+
     protected SecurityService getSecurityService() {
         try {
             return securityServiceTracker.getInitializedService(0);
@@ -2258,7 +2258,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
             throw new RuntimeException(e);
         }
     }
-    
+
     @Override
     public List<String> getLeaderboardNames() {
         return getLeaderboardNamesFilteredForCurrentUser();
@@ -2302,7 +2302,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
         }
         return leaderboard;
     }
-    
+
     @Override
     public StrippedLeaderboardDTO getLeaderboard(String leaderboardName) {
         Leaderboard leaderboard = getLeaderboardAndCheckReadPermission(leaderboardName);
@@ -2345,7 +2345,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
         if (leaderboard instanceof RegattaLeaderboard) {
             RegattaLeaderboard regattaLeaderboard = (RegattaLeaderboard) leaderboard;
             Regatta regatta = regattaLeaderboard.getRegatta();
-            leaderboardDTO.regattaName = regatta.getName(); 
+            leaderboardDTO.regattaName = regatta.getName();
             leaderboardDTO.scoringScheme = regatta.getScoringScheme().getType();
             leaderboardDTO.canBoatsOfCompetitorsChangePerRace = regatta.canBoatsOfCompetitorsChangePerRace();
             if (leaderboard instanceof RegattaLeaderboardWithOtherTieBreakingLeaderboard) {
@@ -2377,9 +2377,9 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
                     raceDTO = baseDomainFactory.createRaceDTO(getService(), withGeoLocationData, raceIdentifier, trackedRace);
                     if(withStatisticalData) {
                         Iterable<MediaTrack> mediaTracksForRace = getService().getMediaTracksForRace(raceIdentifier);
-                        raceDTO.trackedRaceStatistics = baseDomainFactory.createTrackedRaceStatisticsDTO(trackedRace, leaderboard, raceColumn, fleet, mediaTracksForRace); 
+                        raceDTO.trackedRaceStatistics = baseDomainFactory.createTrackedRaceStatisticsDTO(trackedRace, leaderboard, raceColumn, fleet, mediaTracksForRace);
                     }
-                }    
+                }
                 final FleetDTO fleetDTO = baseDomainFactory.convertToFleetDTO(fleet);
                 RaceColumnDTO raceColumnDTO = leaderboardDTO.addRace(raceColumn.getName(),
                         raceColumn.getExplicitFactor(), leaderboard.getScoringScheme().getScoreFactor(raceColumn),
@@ -2438,11 +2438,11 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
     }
 
     @Override
-    public SwissTimingEventRecordDTO getRacesOfSwissTimingEvent(String eventJsonURL) 
+    public SwissTimingEventRecordDTO getRacesOfSwissTimingEvent(String eventJsonURL)
             throws UnknownHostException, IOException, InterruptedException, ParseException {
-        SwissTimingEventRecordDTO result = null; 
+        SwissTimingEventRecordDTO result = null;
         List<SwissTimingRaceRecordDTO> swissTimingRaces = new ArrayList<SwissTimingRaceRecordDTO>();
-        
+
         // TODO: delete getSwissTimingAdapter().getSwissTimingRaceRecords() method
         // TODO: delete SwissTimingDomainFactory.getRaceTypeFromRaceID(String raceID)
         URL url = new URL(eventJsonURL);
@@ -2452,9 +2452,9 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
         if (eventResult != null) {
             for (RegattaResultDescriptor regattaResult : eventResult.getRegattaResults()) {
                 for (RaceResultDescriptor race : regattaResult.getRaceResults()) {
-                    // add only the  tracked races
+                    // add only the tracked races
                     if (race.isTracked() != null && race.isTracked() == true) {
-                        SwissTimingRaceRecordDTO swissTimingRaceRecordDTO = new SwissTimingRaceRecordDTO(race.getId(), race.getName(), 
+                        SwissTimingRaceRecordDTO swissTimingRaceRecordDTO = new SwissTimingRaceRecordDTO(race.getId(), race.getName(),
                                 regattaResult.getName(), race.getSeriesName(), race.getFleetName(), race.getStatus(), race.getStartTime(),
                                 regattaResult.getXrrEntriesUrl() != null ? regattaResult.getXrrEntriesUrl().toExternalForm() : null, hasRememberedRegatta(race.getId()));
                         swissTimingRaceRecordDTO.boatClass = regattaResult.getIsafId() != null && !regattaResult.getIsafId().isEmpty() ? regattaResult.getIsafId() : regattaResult.getClassName();
@@ -2468,12 +2468,12 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
         }
         return result;
     }
-    
+
     protected RaceLogStore getRaceLogStore() {
         return MongoRaceLogStoreFactory.INSTANCE.getMongoRaceLogStore(mongoObjectFactory,
                 domainObjectFactory);
     }
-    
+
     protected RegattaLogStore getRegattaLogStore() {
         return MongoRegattaLogStoreFactory.INSTANCE.getMongoRegattaLogStore(
                 mongoObjectFactory, domainObjectFactory);
@@ -2490,7 +2490,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
     @Override
     public List<SwissTimingReplayRaceDTO> listSwissTiminigReplayRaces(String swissTimingUrl) {
         List<SwissTimingReplayRace> replayRaces = getSwissTimingReplayService().listReplayRaces(swissTimingUrl);
-        List<SwissTimingReplayRaceDTO> result = new ArrayList<SwissTimingReplayRaceDTO>(replayRaces.size()); 
+        List<SwissTimingReplayRaceDTO> result = new ArrayList<SwissTimingReplayRaceDTO>(replayRaces.size());
         for (SwissTimingReplayRace replayRace : replayRaces) {
             result.add(new SwissTimingReplayRaceDTO(replayRace.getFlightNumber(), replayRace.getRaceId(),
                     replayRace.getRsc(), replayRace.getName(), replayRace.getBoatClass(), replayRace.getStartTime(),
@@ -2529,7 +2529,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
     }
 
     /**
-     * Finds a competitor in a sequence of competitors that has an {@link Competitor#getId()} equal to <code>id</code>. 
+     * Finds a competitor in a sequence of competitors that has an {@link Competitor#getId()} equal to <code>id</code>.
      */
     private Competitor getCompetitorByIdAsString(Iterable<Competitor> competitors, String idAsString) {
         for (Competitor c : competitors) {
@@ -2628,7 +2628,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
             case RACE_IMPLIED_WIND:
                 final RankingMetric rankingMetric = trackedRace.getRankingMetric();
                 if (rankingMetric instanceof ORCPerformanceCurveRankingMetric) {
-                    final ORCPerformanceCurveRankingMetric orcPcsRankingMetric = 
+                    final ORCPerformanceCurveRankingMetric orcPcsRankingMetric =
                             (ORCPerformanceCurveRankingMetric) rankingMetric;
                     try {
                         final Speed impliedWind = orcPcsRankingMetric.getImpliedWind(competitor, timePoint, cache);
@@ -2762,7 +2762,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
                 result = getBravoDoubleValue(BravoFixTrack::getTargetBoatspeedPIfAvailable, trackedRace, competitor, timePoint);
                 break;
             }
-            
+
             case EXPEDITION_RACE_AWA: {
                 result = getBravoDoubleValue(BravoFixTrack::getExpeditionAWAIfAvailable, trackedRace, competitor, timePoint);
                 break;
@@ -2933,17 +2933,17 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
             TrackedRace trackedRace, Competitor competitor, TimePoint timePoint) {
         return getBravoValue(valueGetter, Function.identity(), trackedRace, competitor, timePoint);
     }
-    
+
     private Double getBravoBearingInDegrees(BiFunction<BravoFixTrack<Competitor>, TimePoint, Bearing> valueGetter,
             TrackedRace trackedRace, Competitor competitor, TimePoint timePoint) {
         return getBravoValue(valueGetter, Bearing::getDegrees, trackedRace, competitor, timePoint);
     }
-    
+
     private Double getBravoDistanceInMeters(BiFunction<BravoFixTrack<Competitor>, TimePoint, Distance> valueGetter,
             TrackedRace trackedRace, Competitor competitor, TimePoint timePoint) {
         return getBravoValue(valueGetter, Distance::getMeters, trackedRace, competitor, timePoint);
     }
-    
+
     private <T> Double getBravoValue(BiFunction<BravoFixTrack<Competitor>, TimePoint, T> valueGetter,
             Function<T, Double> mapperToDouble,
             TrackedRace trackedRace, Competitor competitor, TimePoint timePoint) {
@@ -2961,7 +2961,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
 
     @Override
     public CompetitorsRaceDataDTO getCompetitorsRaceData(RegattaAndRaceIdentifier race, List<CompetitorDTO> competitors, Date from, Date to,
-            final long stepSizeInMillis, final DetailType detailType, final String leaderboardGroupName, final UUID leaderboardGroupId, 
+            final long stepSizeInMillis, final DetailType detailType, final String leaderboardGroupName, final UUID leaderboardGroupId,
             final String leaderboardName) throws NoWindException, NotFoundException {
         CompetitorsRaceDataDTO result = null;
         final TrackedRace trackedRace = getExistingTrackedRace(race);
@@ -3053,7 +3053,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
     }
 
     @Override
-    public List<Triple<String, List<CompetitorDTO>, List<Double>>> getLeaderboardDataEntriesForAllRaceColumns(String leaderboardName, 
+    public List<Triple<String, List<CompetitorDTO>, List<Double>>> getLeaderboardDataEntriesForAllRaceColumns(String leaderboardName,
             Date date, DetailType detailType) throws Exception {
         List<com.sap.sse.common.Util.Triple<String, List<CompetitorDTO>, List<Double>>> result = new ArrayList<>();
         // Attention: The reason why we read the data from the LeaderboardDTO and not from the leaderboard directly is to ensure
@@ -3077,7 +3077,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
                             competitorDTOs.add(baseDomainFactory.convertToCompetitorDTO(e2.getKey()));
                             pointSums.add(e2.getValue());
                         }
-                        result.add(new Triple<>(e.getKey().getName(), competitorDTOs, pointSums)); 
+                        result.add(new Triple<>(e.getKey().getName(), competitorDTOs, pointSums));
                     }
                     break;
                 case REGATTA_RANK:
@@ -3089,7 +3089,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
                         List<Double> values = new ArrayList<Double>();
                         List<CompetitorDTO> competitorDTOs = new ArrayList<>();
                         for (Competitor competitor : e.getValue()) {
-                            values.add(new Double(rank));
+                            values.add(Double.valueOf(rank));
                             competitorDTOs.add(baseDomainFactory.convertToCompetitorDTO(competitor));
                             rank++;
                         }
@@ -3348,14 +3348,14 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
         getSecurityService().checkCurrentUserReadPermission(leaderboardGroupByName);
         return leaderboardGroupByName == null ? null : convertToLeaderboardGroupDTO(leaderboardGroupByName, withGeoLocationData, false);
     }
-    
+
     @Override
     public LeaderboardGroupDTO getLeaderboardGroupById(final UUID groupId) {
         final LeaderboardGroup leaderboardGroupById = getService().getLeaderboardGroupByID(groupId);
         getSecurityService().checkCurrentUserReadPermission(leaderboardGroupById);
         return leaderboardGroupById == null ? null : convertToLeaderboardGroupDTO(leaderboardGroupById, false, false);
     }
-    
+
     /**
      * @see #getLeaderboardGroupByIdOrName(UUID, String)
      */
@@ -3365,7 +3365,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
         getSecurityService().checkCurrentUserReadPermission(leaderboardGroup);
         return leaderboardGroup == null ? null : convertToLeaderboardGroupDTO(leaderboardGroup, false, false);
     }
-    
+
     protected LeaderboardGroupDTO convertToLeaderboardGroupDTO(final LeaderboardGroup leaderboardGroup,
             final boolean withGeoLocationData, final boolean withStatisticalData) {
         final LeaderboardGroupDTO groupDTO = new LeaderboardGroupDTO(leaderboardGroup.getId(),
@@ -3429,7 +3429,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
     public String[] getReplicableIdsAsStringThatShallLeadToWarningAboutInstanceBeingReplica() {
         return new String[] { getService().getId().toString() };
     }
-    
+
     @Override
     public void startReplicatingFromMaster(String messagingHost, String masterHostName, String exchangeName,
             int servletPort, int messagingPort, String usernameOrNull, String passwordOrNull)
@@ -3469,7 +3469,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
     /**
      * Determines the base URL (protocol, host and port parts) used for the currently executing servlet request. Defaults
      * to <code>http://sapsailing.com</code>.
-     * @throws MalformedURLException 
+     * @throws MalformedURLException
      */
     private URL getRequestBaseURL() throws MalformedURLException {
         final URL url = new URL(getThreadLocalRequest().getRequestURL().toString());
@@ -3501,7 +3501,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
         }
         return sailingServerDTO;
     }
-    
+
     private Iterable<EventBaseDTO> convertToEventDTOs(Iterable<EventBase> events) {
         List<EventBaseDTO> result = new ArrayList<>();
         for (EventBase event : events) {
@@ -3522,7 +3522,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
         }
         return imageDimensions;
     }
-    
+
     protected String getEventBaseURLFromEventOrRequest(Event event) throws MalformedURLException {
         return event.getBaseURL() == null ? getRequestBaseURL().toString() : event.getBaseURL().toString();
     }
@@ -3548,7 +3548,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
                 leaderboardGroupBase.getDescription(), leaderboardGroupBase.getDisplayName(),
                 leaderboardGroupBase.hasOverallLeaderboard());
     }
-    
+
     private void copyEventBaseFieldsToDTO(EventBase event, EventBaseDTO eventDTO) {
         eventDTO.venue = new VenueDTO(event.getVenue() != null ? event.getVenue().getName() : null);
         eventDTO.startDate = event.getStartDate() != null ? event.getStartDate().asDate() : null;
@@ -3661,7 +3661,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
     }
 
     private VideoDTO convertToVideoDTO(VideoDescriptor video) {
-        VideoDTO result = new VideoDTO(video.getURL().toString(), video.getMimeType(), 
+        VideoDTO result = new VideoDTO(video.getURL().toString(), video.getMimeType(),
                 video.getCreatedAtDate() != null ? video.getCreatedAtDate().asDate() : null);
         result.setCopyright(video.getCopyright());
         result.setTitle(video.getTitle());
@@ -3684,7 +3684,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
         }
         return Locale.forLanguageTag(localeName);
     }
-    
+
     private String toLocaleName(Locale locale) {
         if(locale == null) {
             return null;
@@ -3718,7 +3718,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
         courseAreaDTO.id = courseArea.getId();
         return courseAreaDTO;
     }
-    
+
     /** for backward compatibility with the regatta overview */
     @Override
     public List<RaceGroupDTO> getRegattaStructureForEvent(UUID eventId) {
@@ -3780,9 +3780,9 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
      * The name of the regatta to be shown on the regatta overview webpage is retrieved from the name of the {@link Leaderboard}. Since regattas are
      * not always represented by a {@link Regatta} object in the Sailing Suite but need to be shown on the regatta overview page, the leaderboard is
      * used as the representative of the sailing regatta. When a display name is set for a leaderboard, this name is favored against the (mostly technical)
-     * regatta name as the display name represents the publicly visible name of the regatta. 
+     * regatta name as the display name represents the publicly visible name of the regatta.
      * <br>
-     * When the leaderboard is a {@link RegattaLeaderboard} the name of the {@link Regatta} is used, otherwise the leaderboard 
+     * When the leaderboard is a {@link RegattaLeaderboard} the name of the {@link Regatta} is used, otherwise the leaderboard
      * is a {@link FlexibleLeaderboard} and it's name is used as the last option.
      * @param leaderboard The {@link Leaderboard} from which the name is be retrieved
      * @return the name of the regatta to be shown on the regatta overview page
@@ -3837,7 +3837,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
         return new ScoreCorrectionEntryDTO(scoreCorrectionForCompetitor.getPoints(),
                 scoreCorrectionForCompetitor.isDiscarded(), scoreCorrectionForCompetitor.getMaxPointsReason());
     }
-    
+
     @Override
     public List<Pair<String, String>> getUrlResultProviderNamesAndOptionalSampleURL() {
         List<Pair<String, String>> result = new ArrayList<>();
@@ -3989,7 +3989,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
     /**
      * The client's day starts at <code>00:00:00Z - clientTimeZoneOffset</code> and ends at
      * <code>23:59:59Z - clientTimeZoneOffset</code>.
-     * 
+     *
      * @param visibleRegattas
      *            if {@code null}, entries from any regatta will be accepted; otherwise (including in case of an empty
      *            list), only entries from regattas whose name is in the list will be accepted.
@@ -4003,7 +4003,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
         if (leaderboard != null) {
             if (visibleRegattas != null && !visibleRegattas.contains(leaderboard.getName())) {
                 return result;
-            } 
+            }
             String regattaName = getRegattaNameFromLeaderboard(leaderboard);
             if (leaderboard instanceof RegattaLeaderboard) {
                 RegattaLeaderboard regattaLeaderboard = (RegattaLeaderboard) leaderboard;
@@ -4038,15 +4038,15 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
         }
         return result;
     }
-    
+
     private SeriesParameters getSeriesParameters(SeriesDTO seriesDTO) {
         SeriesParameters series = new SeriesParameters(seriesDTO.isFirstColumnIsNonDiscardableCarryForward(),
-                seriesDTO.hasSplitFleetContiguousScoring(), seriesDTO.isStartsWithZeroScore(),
-                seriesDTO.getDiscardThresholds(), seriesDTO.getMaximumNumberOfDiscards(),
-                seriesDTO.isOneAlwaysStaysOne());
+                seriesDTO.hasSplitFleetContiguousScoring(), seriesDTO.hasCrossFleetMergedRanking(),
+                seriesDTO.isStartsWithZeroScore(), seriesDTO.getDiscardThresholds(),
+                seriesDTO.getMaximumNumberOfDiscards(), seriesDTO.isOneAlwaysStaysOne());
         return series;
     }
-    
+
     protected LinkedHashMap<String, SeriesCreationParametersDTO> getSeriesCreationParameters(RegattaDTO regattaDTO) {
         LinkedHashMap<String, SeriesCreationParametersDTO> seriesCreationParams = new LinkedHashMap<String, SeriesCreationParametersDTO>();
             for (SeriesDTO series : regattaDTO.series){
@@ -4054,13 +4054,13 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
                 seriesCreationParams.put(series.getName(), new SeriesCreationParametersDTO(series.getFleets(),
                 false, true, seriesParameters.isStartswithZeroScore(), seriesParameters.isFirstColumnIsNonDiscardableCarryForward(),
                         seriesParameters.getDiscardingThresholds(), seriesParameters.isHasSplitFleetContiguousScoring(),
-                        seriesParameters.getMaximumNumberOfDiscards(), seriesParameters.isOneAlwaysStaysOne()));
+                        seriesParameters.isHasCrossFleetMergedRanking(), seriesParameters.getMaximumNumberOfDiscards(), seriesParameters.isOneAlwaysStaysOne()));
             }
         return seriesCreationParams;
     }
 
     @Override
-    public Iterable<RegattaDTO> getRegattas(String manage2SailJsonUrl) { 
+    public Iterable<RegattaDTO> getRegattas(String manage2SailJsonUrl) {
         StructureImporter structureImporter = new StructureImporter(new SetRacenumberFromSeries(), baseDomainFactory);
         Iterable<RegattaJSON> parsedEvent = structureImporter.parseEvent(manage2SailJsonUrl);
         List<RegattaDTO> regattaDTOs = new ArrayList<RegattaDTO>();
@@ -4122,7 +4122,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
         if (!raceColumn.isCarryForward()) {
             for (Fleet fleet : raceColumn.getFleets()) {
                 RegattaOverviewEntryDTO entry = createRegattaOverviewEntryDTO(leaderboard,
-                        boatClassName, regattaName, buyZoneRadius, seriesName, raceColumn, fleet, showOnlyRacesOfSameDay, 
+                        boatClassName, regattaName, buyZoneRadius, seriesName, raceColumn, fleet, showOnlyRacesOfSameDay,
                         clientTimeZoneOffset, dayToCheck);
                 if (entry != null) {
                     addRegattaOverviewEntryToEntriesPerFleet(entriesPerFleet, fleet, entry);
@@ -4147,7 +4147,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
                             if (!entry.raceInfo.isRaceAbortedInPassBefore) {
                                 result.remove(entry);
                             }
-                            
+
                         }
                     }
                 }
@@ -4166,7 +4166,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
     private void addRegattaOverviewEntryToEntriesPerFleet(Map<String, List<RegattaOverviewEntryDTO>> entriesPerFleet,
             Fleet fleet, RegattaOverviewEntryDTO entry) {
         if (!entriesPerFleet.containsKey(fleet.getName())) {
-           entriesPerFleet.put(fleet.getName(), new ArrayList<RegattaOverviewEntryDTO>()); 
+           entriesPerFleet.put(fleet.getName(), new ArrayList<RegattaOverviewEntryDTO>());
         }
         entriesPerFleet.get(fleet.getName()).add(entry);
     }
@@ -4275,8 +4275,8 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
             raceLog.lockForRead();
             try {
                 for(RaceLogEvent raceLogEvent: raceLog.getRawFixes()) {
-                    RaceLogEventDTO entry = new RaceLogEventDTO(raceLogEvent.getPassId(), 
-                            raceLogEvent.getAuthor().getName(), raceLogEvent.getAuthor().getPriority(), 
+                    RaceLogEventDTO entry = new RaceLogEventDTO(raceLogEvent.getPassId(),
+                            raceLogEvent.getAuthor().getName(), raceLogEvent.getAuthor().getPriority(),
                             raceLogEvent.getCreatedAt() != null ? raceLogEvent.getCreatedAt().asDate() : null,
                             raceLogEvent.getLogicalTimePoint() != null ? raceLogEvent.getLogicalTimePoint().asDate() : null,
                             raceLogEvent.getClass().getSimpleName(), raceLogEvent.getShortInfo());
@@ -4301,8 +4301,8 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
             regattaLog.lockForRead();
             try {
                 for(RegattaLogEvent raceLogEvent: regattaLog.getRawFixes()) {
-                    RegattaLogEventDTO entry = new RegattaLogEventDTO( 
-                            raceLogEvent.getAuthor().getName(), raceLogEvent.getAuthor().getPriority(), 
+                    RegattaLogEventDTO entry = new RegattaLogEventDTO(
+                            raceLogEvent.getAuthor().getName(), raceLogEvent.getAuthor().getPriority(),
                             raceLogEvent.getCreatedAt() != null ? raceLogEvent.getCreatedAt().asDate() : null,
                             raceLogEvent.getLogicalTimePoint() != null ? raceLogEvent.getLogicalTimePoint().asDate() : null,
                             raceLogEvent.getClass().getSimpleName(), raceLogEvent.getShortInfo());
@@ -4395,7 +4395,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
         Map<Competitor, Boat> competitorsAndBoats = getService().getCompetitorToBoatMappingsForRace(leaderboardName, raceColumnName, fleetName);
         return baseDomainFactory.convertToCompetitorAndBoatDTOs(competitorsAndBoats);
     }
-    
+
     @Override
     public Iterable<BoatDTO> getAllBoats() {
         final HasPermissions.Action[] requiredActionsForRead = SecuredSecurityTypes.PublicReadableActions.READ_AND_READ_PUBLIC_ACTIONS;
@@ -4501,7 +4501,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
         }
         return dto;
     }
-    
+
     private void copyBasicRacingProcedureProperties(RacingProcedureConfiguration configuration, final RacingProcedureConfigurationDTO racingProcedureConfigurationDTO) {
         racingProcedureConfigurationDTO.classFlag = configuration.getClassFlag();
         racingProcedureConfigurationDTO.hasIndividualRecall = configuration.hasIndividualRecall();
@@ -4593,7 +4593,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
         }
         return new com.sap.sse.common.Util.Triple<Date, Integer, RacingProcedureType>(result.getA() == null ? null : result.getA().asDate(), result.getB(), result.getC());
     }
-    
+
 
     @Override
     public com.sap.sse.common.Util.Triple<Date, Date, Integer> getFinishingAndFinishTime(String leaderboardName,
@@ -4634,11 +4634,11 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
     protected RaceLogTrackingAdapter getRaceLogTrackingAdapter() {
         return getRaceLogTrackingAdapterFactory().getAdapter(getBaseDomainFactory());
     }
-    
+
     protected YellowBrickTrackingAdapterFactory getYellowBrickTrackingAdapterFactory() {
         return yellowBrickTrackingAdapterTracker.getService();
     }
-    
+
     protected YellowBrickTrackingAdapter getYellowBrickTrackingAdapter() {
         return getYellowBrickTrackingAdapterFactory().getYellowBrickTrackingAdapter(getBaseDomainFactory());
     }
@@ -4675,7 +4675,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
     protected RaceLog getRaceLog(com.sap.sse.common.Util.Triple<String, String, String> triple) throws NotFoundException {
         return getRaceLog(triple.getA(), triple.getB(), triple.getC());
     }
-    
+
     protected RegattaLog getRegattaLogInternal(String leaderboardName) throws DoesNotHaveRegattaLogException {
         Leaderboard l = getService().getLeaderboardByName(leaderboardName);
         if (! (l instanceof HasRegattaLike)) {
@@ -4683,7 +4683,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
         }
         return ((HasRegattaLike) l).getRegattaLike().getRegattaLog();
     }
-    
+
     protected RaceLog getRaceLog(String leaderboardName, String raceColumnName, String fleetName) throws NotFoundException {
         RaceColumn raceColumn = getRaceColumn(leaderboardName, raceColumnName);
         Fleet fleet = getFleetByName(raceColumn, fleetName);
@@ -4693,7 +4693,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
     protected Competitor getCompetitor(CompetitorDTO dto) {
         return getService().getCompetitorAndBoatStore().getExistingCompetitorByIdAsString(dto.getIdAsString());
     }
-    
+
     protected CompetitorWithBoat getCompetitor(CompetitorWithBoatDTO dto) {
         return getService().getCompetitorAndBoatStore().getExistingCompetitorWithBoatByIdAsString(dto.getIdAsString());
     }
@@ -4716,7 +4716,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
         }
         return result;
     }
-    
+
     /**
      * Also finds the last position of the marks if set by pinging them as long as currently a {@link TrackedRace} exists
      * whose tracking interval spans the current time. If at least a non-spanning {@link TrackedRace} can be found in the
@@ -4729,7 +4729,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
         final Position lastPos = getService().getMarkPosition(mark, leaderboard, now);
         return convertToMarkDTO(mark, lastPos);
     }
-    
+
     /**
      * @param trackedRace
      *            if <code>null</code>, no position data will be attached to the {@link MarkDTO}s
@@ -4746,7 +4746,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
         }
         return new WaypointDTO(waypoint.getName(), cp, waypoint.getPassingInstructions());
     }
-    
+
     /**
      * @param course
      *            the course to convert
@@ -4771,7 +4771,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
         }
         return result;
     }
-    
+
     @Override
     public RaceCourseDTO getLastCourseDefinitionInRaceLog(final String leaderboardName, String raceColumnName, String fleetName) throws NotFoundException {
         final RaceLog raceLog = getRaceLog(leaderboardName, raceColumnName, fleetName);
@@ -4788,7 +4788,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
             }
         }, /* timePoint */ MillisecondsTimePoint.now());
     }
-    
+
     private TypeBasedServiceFinder<DeviceIdentifierStringSerializationHandler> getDeviceIdentifierStringSerializerHandlerFinder(
             boolean withFallback) {
         TypeBasedServiceFinderFactory factory = getService().getTypeBasedServiceFinderFactory();
@@ -4798,35 +4798,35 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
         }
         return finder;
     }
-    
+
     private DeviceIdentifier deserializeDeviceIdentifier(String type, String deviceId) throws NoCorrespondingServiceRegisteredException,
     TransformationException {
         DeviceIdentifierStringSerializationHandler handler =
                 getDeviceIdentifierStringSerializerHandlerFinder(false).findService(type);
         return handler.deserialize(deviceId, type, deviceId);
     }
-    
+
     protected String serializeDeviceIdentifier(DeviceIdentifier deviceId) throws TransformationException {
         return getDeviceIdentifierStringSerializerHandlerFinder(true).findService(
                 deviceId.getIdentifierType()).serialize(deviceId).getB();
     }
-    
+
     protected List<AbstractLog<?, ?>> getLogHierarchy(String leaderboardName, String raceColumnName,
             String fleetName) throws NotFoundException {
         List<AbstractLog<?, ?>> result = new ArrayList<>();
         RaceLog raceLog = getRaceLog(leaderboardName, raceColumnName, fleetName);
-        
+
         if (raceLog != null){
             result.add(raceLog);
         }
-        
+
         Leaderboard leaderboard = getLeaderboardByName(leaderboardName);
         if (leaderboard instanceof HasRegattaLike) {
             result.add(((HasRegattaLike) leaderboard).getRegattaLike().getRegattaLog());
         }
         return result;
     }
-    
+
     @Override
     public List<String> getDeserializableDeviceIdentifierTypes() {
         List<String> result = new ArrayList<String>();
@@ -4836,7 +4836,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
         }
         return result;
     }
-    
+
     protected DeviceMapping<?> convertToDeviceMapping(DeviceMappingDTO dto)
             throws NoCorrespondingServiceRegisteredException, TransformationException {
         DeviceIdentifier device = deserializeDeviceIdentifier(dto.deviceIdentifier.deviceType, dto.deviceIdentifier.deviceId);
@@ -4865,12 +4865,12 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
     public Collection<String> getGPSFixImporterTypes() {
         return getRegisteredImporterTypes(GPSFixImporter.class);
     }
-    
+
     @Override
     public Collection<String> getSensorDataImporterTypes() {
         return getRegisteredImporterTypes(DoubleVectorFixImporter.class);
     }
-    
+
     private <S> Collection<String> getRegisteredImporterTypes(Class<S> referenceClass) {
         Set<String> result = new HashSet<>();
         for (ServiceReference<S> reference : getRegisteredServiceReferences(referenceClass)) {
@@ -4878,7 +4878,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
         }
         return result;
     }
-    
+
     protected <S extends DoubleVectorFixImporter> S getRegisteredImporter(Class<S> referenceClass, String type)
             throws NoCorrespondingServiceRegisteredException {
         for (ServiceReference<S> reference : getRegisteredServiceReferences(referenceClass)) {
@@ -4889,7 +4889,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
         }
         throw new NoCorrespondingServiceRegisteredException("No importer service found!", type, referenceClass.getName());
     }
-    
+
     private <S> Collection<ServiceReference<S>> getRegisteredServiceReferences(Class<S> referenceClass) {
         try {
             return Activator.getDefault().getServiceReferences(referenceClass, null);
@@ -4898,7 +4898,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
         }
         return Collections.emptyList();
     }
-    
+
     @Override
     public ArrayList<EventDTO> getEventsForLeaderboard(String leaderboardName) {
         final RacingEventService service = getService();
@@ -4956,7 +4956,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
 
     /**
      * Gets all Marks defined in the RegattaLog and the trackedRace
-     * @throws DoesNotHaveRegattaLogException 
+     * @throws DoesNotHaveRegattaLogException
      */
     @Override
     public Iterable<MarkDTO> getMarksInRegattaLog(String leaderboardName) throws DoesNotHaveRegattaLogException {
@@ -4999,7 +4999,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
             }
         }
         return result;
-    }   
+    }
 
     public boolean doesRegattaLogContainCompetitors(String leaderboardName)
             throws DoesNotHaveRegattaLogException, NotFoundException {
@@ -5044,7 +5044,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
         Fleet fleet = getFleetByName(raceColumn, fleetName);
         return convertToCompetitorAndBoatDTOs(raceColumn.getAllCompetitorsAndTheirBoats(fleet));
     }
-    
+
     @Override
     public Collection<CompetitorDTO> getCompetitorRegistrationsForLeaderboard(String leaderboardName) throws NotFoundException {
         Leaderboard leaderboard = getLeaderboardByName(leaderboardName);
@@ -5062,7 +5062,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
         HasRegattaLike regattaLikeLeaderboard = ((HasRegattaLike) leaderboard);
         return convertToCompetitorDTOs(regattaLikeLeaderboard.getCompetitorsRegisteredInRegattaLog());
     }
-    
+
     @Override
     public List<CompetitorAndBoatDTO> getCompetitorRegistrationsInRaceLog(String leaderboardName, String raceColumnName,
             String fleetName) throws NotFoundException {
@@ -5071,7 +5071,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
         Fleet fleet = getFleetByName(raceColumn, fleetName);
         return convertToCompetitorAndBoatDTOs(raceColumn.getCompetitorsRegisteredInRacelog(fleet));
     }
-    
+
     @Override
     public Map<CompetitorDTO, BoatDTO> getCompetitorAndBoatRegistrationsInRaceLog(String leaderboardName, String raceColumnName,
             String fleetName) throws NotFoundException {
@@ -5092,7 +5092,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
         HasRegattaLike regattaLikeLeaderboard = ((HasRegattaLike) leaderboard);
         return convertToBoatDTOs(regattaLikeLeaderboard.getBoatsRegisteredInRegattaLog());
     }
-    
+
     @Override
     public Collection<BoatDTO> getBoatRegistrationsForLeaderboard(String leaderboardName) throws NotFoundException {
         Leaderboard leaderboard = getLeaderboardByName(leaderboardName);
@@ -5117,7 +5117,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
         Fleet fleet = getFleetByName(raceColumn, fleetName);
         return raceColumn.isCompetitorRegistrationInRacelogEnabled(fleet);
     }
-    
+
     protected Fleet getFleetByName(RaceColumn raceColumn, String fleetName) throws NotFoundException{
         Fleet fleet = raceColumn.getFleetByName(fleetName);
         if (fleet == null){
@@ -5125,7 +5125,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
         }
         return fleet;
     }
-    
+
     protected Leaderboard getLeaderboardByName(String leaderboardName) throws NotFoundException{
         Leaderboard leaderboard = getService().getLeaderboardByName(leaderboardName);
         if (leaderboard == null){
@@ -5133,12 +5133,12 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
         }
         return leaderboard;
     }
-    
+
     protected RaceColumn getRaceColumn(String leaderboardName, String raceColumnName) throws NotFoundException{
         Leaderboard leaderboard = getService().getLeaderboardByName(leaderboardName);
         if (leaderboard == null){
             throw new NotFoundException("leaderboard with name "+leaderboardName+" not found");
-        } 
+        }
         RaceColumn raceColumn = leaderboard.getRaceColumnByName(raceColumnName);
         if (raceColumn == null){
             throw new NotFoundException("raceColumn with name "+raceColumnName+" not found");
@@ -5191,7 +5191,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
         }
         return result;
     }
-    
+
     private GPSFixDTO convertToGPSFixDTO(GPSFix fix) {
         final GPSFixDTO result;
         if (fix == null) {
@@ -5233,10 +5233,10 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
     @Override
     public Map<Triple<String, String, String>, Pair<TimePointSpecificationFoundInLog, TimePointSpecificationFoundInLog>> getTrackingTimes(
             Collection<Triple<String, String, String>> leaderboardRaceColumnFleetNames) {
-        Map<Triple<String, String, String>, Pair<TimePointSpecificationFoundInLog, TimePointSpecificationFoundInLog>> trackingTimes = new HashMap<>(); 
+        Map<Triple<String, String, String>, Pair<TimePointSpecificationFoundInLog, TimePointSpecificationFoundInLog>> trackingTimes = new HashMap<>();
         for (Triple<String, String, String> leaderboardRaceColumnFleetName : leaderboardRaceColumnFleetNames) {
             try {
-                trackingTimes.put(leaderboardRaceColumnFleetName, getTrackingTimes(leaderboardRaceColumnFleetName.getA(), 
+                trackingTimes.put(leaderboardRaceColumnFleetName, getTrackingTimes(leaderboardRaceColumnFleetName.getA(),
                         leaderboardRaceColumnFleetName.getB(), leaderboardRaceColumnFleetName.getC()));
             } catch (Exception e) {
                 trackingTimes.put(leaderboardRaceColumnFleetName, null);
@@ -5255,7 +5255,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
         final RegattaLeaderboardWithEliminations rlwe = (RegattaLeaderboardWithEliminations) leaderboard;
         return convertToCompetitorDTOs(rlwe.getEliminatedCompetitors());
     }
-    
+
     @Override
   public Iterable<DetailType> determineDetailTypesForCompetitorChart(String leaderboardGroupName,
           UUID leaderboardGroupId, RegattaAndRaceIdentifier identifier) {
@@ -5328,15 +5328,15 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
     @Override
     public PairingListTemplateDTO calculatePairingListTemplate(final int flightCount, final int groupCount,
             final int competitorCount, final int flightMultiplier, final int tolerance) {
-        PairingListTemplate template = getService().createPairingListTemplate(flightCount, groupCount, competitorCount, 
+        PairingListTemplate template = getService().createPairingListTemplate(flightCount, groupCount, competitorCount,
                 flightMultiplier, tolerance);
         return new PairingListTemplateDTO(flightCount, groupCount, competitorCount, flightMultiplier, tolerance,
                 template.getBoatChanges(), template.getPairingListTemplate(), template.getQuality(), template.getBoatAssignmentsQuality());
     }
-    
+
     @Override
     public PairingListDTO getPairingListFromTemplate(final String leaderboardName, final int flightMultiplier,
-            final Iterable<String> selectedRaceColumnNames, PairingListTemplateDTO templateDTO) 
+            final Iterable<String> selectedRaceColumnNames, PairingListTemplateDTO templateDTO)
             throws NotFoundException, PairingListCreationException {
         Leaderboard leaderboard = getLeaderboardByName(leaderboardName);
         getSecurityService().checkCurrentUserReadPermission(leaderboard);
@@ -5380,7 +5380,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
         }
         return new PairingListDTO(result, Util.asList(selectedRaceColumnNames));
     }
-    
+
     @Override
     public PairingListDTO getPairingListFromRaceLogs(final String leaderboardName) throws NotFoundException {
         Leaderboard leaderboard = getLeaderboardByName(leaderboardName);
@@ -5397,7 +5397,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
                         final Boat boat = competitorAndBoatPair.getB();
                         fleetList.add(new Pair<CompetitorDTO, BoatDTO>(baseDomainFactory.convertToCompetitorDTO(competitorAndBoatPair.getA()),
                                 new BoatDTO(boat.getId().toString(), boat.getName(),
-                                        convertToBoatClassDTO(boat.getBoatClass()), boat.getSailID(), 
+                                        convertToBoatClassDTO(boat.getBoatClass()), boat.getSailID(),
                                         boat.getColor())));
                     }
                     if (fleetList.size() > 0) {
@@ -5414,7 +5414,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
         }
         return new PairingListDTO(result, raceColumnNames);
     }
-    
+
     public List<String> getRaceDisplayNamesFromLeaderboard(String leaderboardName,List<String> raceColumnNames) throws NotFoundException {
         Leaderboard leaderboard = this.getLeaderboardByName(leaderboardName);
         getSecurityService().checkCurrentUserReadPermission(leaderboard);
@@ -5544,7 +5544,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
         }
         return result;
     }
-    
+
     protected boolean isSmartphoneTrackingEnabled(DynamicTrackedRace trackedRace) {
         boolean result = false;
         for (RaceLog raceLog : trackedRace.getAttachedRaceLogs()) {
@@ -5556,7 +5556,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
         }
         return result;
     }
-    
+
     @Override
     public SliceRacePreperationDTO prepareForSlicingOfRace(final RegattaAndRaceIdentifier raceIdentifier) {
         getSecurityService().checkCurrentUserReadPermission(raceIdentifier);
@@ -5579,7 +5579,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
         currentCount++;
         return new SliceRacePreperationDTO(prefix + currentCount, alreadyUsedRaceNames);
     }
-    
+
     @Override
     public Boolean checkIfRaceIsTracking(RegattaAndRaceIdentifier race) {
         getSecurityService().checkCurrentUserReadPermission(race);
@@ -5612,9 +5612,9 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
     /**
      * Takes a list of source URLs, the resizing task and the sizes of the resized images to create a ImageDTO for every
      * resized image
-     * 
+     *
      * @author Robin Fleige (D067799)
-     * 
+     *
      * @param sourceRefs
      *            list of source URLs
      * @param resizingTask
@@ -5692,7 +5692,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
         }
         return result;
     }
-    
+
     public String createRaceBoardLinkQrCode(String url) {
         String result;
         try {
@@ -5703,7 +5703,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
         }
         return result;
     }
-    
+
     public String createEncodedQRCodeFromUrl(String url, int size) throws Exception {
         final String result;
         DataInputStream imageIs = new DataInputStream(QRCodeGenerationUtil.create(url, size, "H"));
@@ -5902,7 +5902,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
         getService().getSecurityService().checkCurrentUserReadPermission(leaderboard);
         return getORCPerformanceCurveLegInfo(Collections.singleton(getRaceLog(leaderboardName, raceColumnName, fleetName)));
     }
-    
+
     private Map<Integer, ORCPerformanceCurveLegImpl> getORCPerformanceCurveLegInfo(Iterable<RaceLog> raceLogs) {
         final Map<Integer, ORCPerformanceCurveLegImpl> result = new HashMap<>();
         for (final RaceLog raceLog : raceLogs) {
@@ -6128,7 +6128,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
         } else {
             throw new IllegalArgumentException("Waypoints must contain one or two marks");
         }
-        
+
         return new WaypointTemplateImpl(controlPointTemplate, waypointTemplate.getPassingInstruction());
     }
 
@@ -6164,7 +6164,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
             }
         }
         return result;
-    
+
     }
 
     @Override
@@ -6175,7 +6175,7 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
         getSecurityService().checkCurrentUserUpdatePermission(raceIdentifier);
         getSecurityService().checkCurrentUserUpdatePermission(regattaLeaderboard);
         getSecurityService().checkCurrentUserUpdatePermission(regatta);
-    
+
         final boolean result;
         if (regatta == null || !(regattaLeaderboard instanceof RegattaLeaderboard) || trackedRace == null
                 || trackedRace.getStartOfTracking() == null || !isSmartphoneTrackingEnabled(trackedRace)) {
@@ -6188,11 +6188,13 @@ public class SailingServiceImpl extends ResultCachingProxiedRemoteServiceServlet
         }
         return result;
     }
-    
+
     @Override
     public Integer getAdminConsoleChangeLogSize() {
         try (CloseableHttpClient client = HttpClients.createDefault()) {
-            final URIBuilder url = new URIBuilder(getRequestBaseURL().toURI()).setPath("release_notes_admin.html");
+            // FIXME this will break for any reverse proxy or port-mapping container between the client and this server!
+            final int localPort = getThreadLocalRequest().getLocalPort();
+            final URIBuilder url = new URIBuilder("http://127.0.0.1:"+localPort+"/release_notes_admin.html");
             final HttpGet request = new HttpGet(url.build());
             return client.execute(request, response -> EntityUtils.toString(response.getEntity())).length();
         } catch (IOException | URISyntaxException e) {
